k3s/generated_manifests/piper/Service-piper.yaml
apiVersion: v1
kind: Service
metadata:
  name: piper
  namespace: piper
spec:
  ports:
    - name: wyoming
      port: 10200
      targetPort: 10200
  selector:
    app: piper
  type: ClusterIP
