k3s/generated_manifests/piper/NetworkPolicy-piper.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: piper
  namespace: piper
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - ports:
        - port: 443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-assistant
      ports:
        - port: 10200
          protocol: TCP
  podSelector:
    matchLabels:
      app: piper
  policyTypes:
    - Ingress
    - Egress
